--- a/style.css
+++ b/style.css
@@ -21,6 +21,22 @@ body {
   background-color: rgb(59, 135, 118);
 }
 
+#main-logo {
+  position: absolute;
+  top: -3px;
+  left: 0;
+  right: 0;
+
+  width: auto;
+  height: auto;
+  margin: auto;
+
+  text-align: center;
+  font-family: 'Satisfy', cursive;
+  font-size: 50px;
+  color: white;
+}
+
 #body-grid-container {
   position: relative;
   top: 110px;
@@ -34,13 +50,45 @@ body {
   margin-right: 40px;
 }
 
-#main-recipe-header {
-  grid-column: span 5;
-  justify-self: center;
+#category-container {
+  grid-column: span 3;
+
+  height: 40px;
+
+  border-bottom: 1px solid white;
+}
+
+.category-text {
+  position: absolute;
+  top: 18px;
 
   font-family: sans-serif;
-  font-size: 38px;
+  font-size: 16px;
   color: white;
+}
+
+.category-item {
+  position: relative !important;
+  left: 70px;
+
+  display: inline-block;
+
+  padding-left: 10px;
+  padding-right: 10px;
+
+  cursor: pointer;
+}
+
+.category-active {
+  border-bottom: 4px solid rgb(76, 211, 182);
+}
+
+#sort-by-button {
+  grid-column: span 2;
+
+  height: 40px;
+
+  outline: none;
 }
 
 .tile {
@@ -96,6 +144,10 @@ body {
   #main-recipe-header {
     grid-column: span 4;
   }
+
+  #category-container {
+    grid-column: span 2;
+  }
 }
 
 
@@ -108,6 +160,10 @@ body {
 
   #main-recipe-header {
     grid-column: span 3;
+  }
+
+  #category-container {
+    grid-column: span 1;
   }
 }
 
@@ -122,6 +178,10 @@ body {
   #main-recipe-header {
     grid-column: span 2;
   }
+
+  #category-container {
+    grid-column: span 2;
+  }
 }
 
 
@@ -133,6 +193,14 @@ body {
   }
 
   #main-recipe-header {
+    grid-column: span 1;
+  }
+
+  #category-container {
+    grid-column: span 1;
+  }
+
+  #sort-by-button {
     grid-column: span 1;
   }
 }
