--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 #navbar {
-  z-index: 10;
+  z-index: 20;
   position: fixed;
   top: 0;
 
@@ -58,23 +58,36 @@ body {
   border-bottom: 1px solid white;
 }
 
-.category-text {
+#category-row-top {
   position: absolute;
-  top: 18px;
 
-  font-family: sans-serif;
-  font-size: 16px;
-  color: white;
+  display: inline-block;
+
+  height: 40px;
+}
+
+#category-row-bottom {
+  position: absolute;
+  left: 155.45px;
+
+  display: inline-block;
+
+  height: 40px;
 }
 
 .category-item {
+  z-index: 10;
   position: relative !important;
-  left: 70px;
+  top: 18px;
 
   display: inline-block;
 
   padding-left: 10px;
   padding-right: 10px;
+
+  font-family: sans-serif;
+  font-size: 16px;
+  color: white;
 
   cursor: pointer;
 }
@@ -146,7 +159,25 @@ body {
   }
 
   #category-container {
+    position: relative;
+    top: -20px;
+
     grid-column: span 2;
+  }
+
+  #category-row-top {
+    left: 0;
+    right: 0;
+
+    text-align: center;
+  }
+
+  #category-row-bottom {
+    top: 25px;
+    left: 0;
+    right: 0;
+
+    text-align: center;
   }
 }
 
@@ -163,7 +194,11 @@ body {
   }
 
   #category-container {
-    grid-column: span 1;
+    grid-column: span 3;
+  }
+
+  #sort-by-button {
+    grid-column: span 3;
   }
 }
 
@@ -180,6 +215,14 @@ body {
   }
 
   #category-container {
+    grid-column: span 2;
+  }
+
+  #category-container {
+    grid-column: span 2;
+  }
+
+  #sort-by-button {
     grid-column: span 2;
   }
 }
