--- a/style.css
+++ b/style.css
@@ -114,17 +114,10 @@ body {
   background-position: center;
   background-size: cover;
 
-  /* overflow: hidden; */
+  opacity: 0;
+
   cursor: pointer;
 }
-
-/* #tile-0 {
-  background-image: url("https://res.cloudinary.com/dtwyohvli/image/upload/v1544117892/recipe-book/fajitas.jpg");
-}
-
-#tile-1 {
-  background-image: url("https://res.cloudinary.com/dtwyohvli/image/upload/v1544118007/recipe-book/chili-con-carne.jpg");
-} */
 
 .tile-header {
   display: flex;
@@ -142,6 +135,11 @@ body {
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000; */
+}
+
+.tile-fade-in {
+  opacity: 1.0;
+  transition: opacity 1000ms ease-in-out;
 }
 
 
