--- a/style.css
+++ b/style.css
@@ -21,6 +21,30 @@ body {
   background-color: rgb(59, 135, 118);
 }
 
+#hamburger-menu {
+    z-index: 20;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+
+    width: 29px;
+
+    cursor: pointer;
+  }
+
+  .hamburger-bar {
+    width: 25px;
+    height: 2px;
+    margin: 6px 0;
+
+    color: white;
+
+    border-radius: 10px;
+    background-color: white;
+
+    cursor: pointer;
+  }
+
 #main-logo {
   position: absolute;
   top: -3px;
