--- a/style.css
+++ b/style.css
@@ -139,6 +139,41 @@ body {
   right: 0;
 }
 
+#search-dropdown {
+  z-index: 20;
+  position: fixed;
+  top: 30px;
+
+  width: 100%;
+  height: 40px;
+
+  background-color: rgb(47, 106, 93);
+
+  transition: transform 400ms ease-in-out;
+}
+
+#search-bar {
+  -webkit-appearance: none;
+
+  position: absolute;
+  top: 7px;
+  left: 0;
+  right: 0;
+
+  width: 35%;
+  min-width: 220px;
+  height: 25px;
+  margin: auto;
+  padding-left: 4px;
+
+  font-size: 14px;
+  color: black;
+
+  border: 2px solid rgb(59, 135, 118);
+  background-color: white;
+  outline: none;
+}
+
 #body-grid-container {
   position: relative;
   top: 110px;
