--- a/style.css
+++ b/style.css
@@ -203,26 +203,56 @@ body {
   transition: transform 300ms ease-in-out;
 }
 
+#search-bar-container {
+  position: absolute;
+  top: 5px;
+  left: 0;
+  right: 0;
+
+  width: 39%;
+  min-width: 240px;
+  height: 25px;
+  margin: auto;
+}
+
 #search-bar {
   -webkit-appearance: none;
 
   position: absolute;
-  top: 7px;
-  left: 0;
+  left: -30px;
   right: 0;
 
-  width: 35%;
-  min-width: 220px;
+  width: 100%;
   height: 25px;
   margin: auto;
   padding-left: 4px;
+  padding-right: 4px;
 
-  font-size: 14px;
-  color: black;
+  font-size: 16px;
+  color: white;
 
-  border: 2px solid rgb(59, 135, 118);
+  border: 0;
+  border-bottom: 1px solid white;
   background-color: white;
+  background-color: rgb(47, 106, 93);
   outline: none;
+
+  cursor: text;
+}
+
+#search-bar::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+#search-icon-dropdown {
+  z-index: 30;
+  position: absolute;
+  right: -14px;
+
+  font-size: 1.5em;
+  color: white;
+
+  cursor: pointer;
 }
 
 #body-grid-container {
