--- a/style.css
+++ b/style.css
@@ -231,8 +231,9 @@ body {
   font-size: 16px;
   color: white;
 
-  border: 0;
+  border: none;
   border-bottom: 1px solid white;
+  border-radius: 0;
   background-color: white;
   background-color: rgb(47, 106, 93);
   outline: none;
