--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 * {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -210,7 +212,7 @@ body {
   right: 0;
 
   width: 40%;
-  min-width: 275px;
+  min-width: 225px;
 
   height: 25px;
   margin: auto;
