--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ body {
   height: 100%;
   margin: auto;
 
-  border-left: 1px solid white;
+  border-left: 1px solid rgba(255, 255, 255, 0.6);
 }
 
 #dropdown-right {
@@ -246,7 +246,7 @@ body {
 }
 
 #search-bar::placeholder {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 #search-icon-dropdown {
