--- a/recipes/recipe-page-style.css
+++ b/recipes/recipe-page-style.css
@@ -10,7 +10,7 @@
 
   height: 60px;
 
-  border: 1px solid white;
+  border: 1px dashed white;
 }
 
 #ingredient-container {
@@ -19,7 +19,7 @@
 
   height: 400px;
 
-  border: 1px solid blue;
+  border: 1px dashed white;
 }
 
 #image-container {
@@ -31,7 +31,6 @@
   border: 1px solid rgb(76, 211, 182);
 
   background-color: rgb(0, 0, 0);
-  background-image: url("https://res.cloudinary.com/dtwyohvli/image/upload/v1544379016/recipe-book/bbq-chicken.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -42,7 +41,7 @@
 
   height: 400px;
 
-  border: 1px solid yellow;
+  border: 1px dashed white;
 }
 
 
