--- a/recipes/recipe-page-style.css
+++ b/recipes/recipe-page-style.css
@@ -8,7 +8,13 @@
   grid-column: span 5;
   order: 1;
 
-  height: 60px;
+  height: auto;
+
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 24px;
+  font-weight: normal;
+  color: white;
 
   border: 1px dashed white;
 }
