--- a/main-style.css
+++ b/main-style.css
@@ -1,5 +1,6 @@
 * {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  user-select: none;
 
   box-sizing: border-box;
   margin: 0;
@@ -157,10 +158,10 @@ body {
 .dropdown-button {
   z-index: 20;
   position: absolute;
-  top: 12px;
 
   width: 50%;
   height: 100%;
+  padding-top: 12px;
 
   text-align: center;
   font-family: sans-serif;
@@ -169,6 +170,10 @@ body {
   color: white;
 
   cursor: pointer;
+}
+
+.dropdown-button:active {
+  box-shadow: inset 0 0 40px DarkSlateGray;
 }
 
 #dropdown-left {
