--- a/recipes/recipe-page-style.css
+++ b/recipes/recipe-page-style.css
@@ -16,7 +16,7 @@
   font-weight: normal;
   color: white;
 
-  border: 1px dashed white;
+  /* border: 1px dashed white; */
 }
 
 #ingredient-container {
@@ -25,7 +25,54 @@
 
   height: 400px;
 
-  border: 1px dashed white;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  color: white;
+
+  /* border: 1px dashed white; */
+}
+
+#ingredient-title {
+  position: relative;
+
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+
+  text-align: center;
+  font-size: 20px;
+
+  border-bottom: 1px solid white;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  padding-bottom: 4px;
+}
+
+#ingredient-list-left {
+  position: relative;
+  float: left;
+
+  width: 50%;
+  height: auto;
+
+  /* border: 1px dashed yellow; */
+}
+
+#ingredient-list-right {
+  position: relative;
+  float: right;
+
+  width: 50%;
+  height: auto;
+
+  /* border: 1px dashed red; */
 }
 
 #image-container {
@@ -41,13 +88,34 @@
   background-size: cover;
 }
 
-#instruction-container {
+#recipe-container {
   grid-column: span 5;
   order: 4;
 
+  position: relative;
+
   height: 400px;
 
-  border: 1px dashed white;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  color: white;
+
+  /* border: 1px dashed white; */
+}
+
+#recipe-title {
+  position: relative;
+  top: 0;
+
+  width: 100%;
+  height: auto;
+  padding-bottom: 5px;
+
+  text-align: center;
+  font-size: 20px;
+
+  border-bottom: 1px solid white;
 }
 
 
@@ -75,11 +143,15 @@
   #ingredient-container {
     grid-column: span 4;
     order: 3;
+
+    height: auto;
   }
 
-  #instruction-container {
+  #recipe-container {
     grid-column: span 4;
     order: 4;
+
+    /* height: auto; */
   }
 }
 
@@ -105,7 +177,7 @@
     grid-column: span 3;
   }
 
-  #instruction-container {
+  #recipe-container {
     grid-column: span 3;
   }
 }
@@ -132,7 +204,15 @@
     grid-column: span 2;
   }
 
-  #instruction-container {
+  #ingredient-list-left {
+    width: 100%;
+  }
+
+  #ingredient-list-right {
+    display: none;
+  }
+
+  #recipe-container {
     grid-column: span 2;
   }
 }
@@ -159,7 +239,7 @@
     grid-column: span 1;
   }
 
-  #instruction-container {
+  #recipe-container {
     grid-column: span 1;
   }
 }
