--- a/recipes/recipe-page-style.css
+++ b/recipes/recipe-page-style.css
@@ -56,7 +56,7 @@ li {
   padding-bottom: 6px;
 }
 
-.ingredient-list-container {
+.ingredient-list-container-inner {
   position: relative;
   display: inline-block;
   left: 0;
@@ -71,7 +71,7 @@ li {
   /* border: 1px dashed white; */
 }
 
-#ingredient-list-left {
+#ingredient-list-container-left {
   position: relative;
   float: left;
 
@@ -81,7 +81,7 @@ li {
   /* border: 1px dashed yellow; */
 }
 
-#ingredient-list-right {
+#ingredient-list-container-right {
   position: relative;
   float: right;
 
@@ -170,7 +170,7 @@ li {
     margin-top: 20px;
   }
 
-  .ingredient-list-container {
+  .ingredient-list-container-inner {
     width: auto;
   }
 
@@ -231,11 +231,11 @@ li {
     grid-column: span 2;
   }
 
-  #ingredient-list-left {
+  #ingredient-list-container-left {
     width: 100%;
   }
 
-  #ingredient-list-right {
+  #ingredient-list-container-right {
     display: none;
   }
 
