--- a/recipes/recipe-page-style.css
+++ b/recipes/recipe-page-style.css
@@ -57,6 +57,11 @@ li {
 
   padding-bottom: 6px;
 
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  color: white;
+
   cursor: text;
 }
 
