--- a/main-style.css
+++ b/main-style.css
@@ -10,6 +10,9 @@
 }
 
 body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+
   background-color: rgb(36, 38, 40);
 }
 
@@ -87,7 +90,7 @@ body {
   margin: auto;
 
   text-align: center;
-  font-family: 'Satisfy', cursive;
+  font-family: "Satisfy", cursive;
   font-size: 50px;
   color: white;
 
@@ -161,12 +164,10 @@ body {
 
   width: 50%;
   height: 100%;
-  padding-top: 12px;
+  padding-top: 11px;
 
   text-align: center;
-  font-family: sans-serif;
   font-size: 16px;
-  font-weight: normal;
   color: white;
 
   cursor: pointer;
@@ -237,6 +238,7 @@ body {
   padding-left: 4px;
   padding-right: 4px;
 
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   color: white;
 
@@ -310,14 +312,13 @@ body {
 .category-item {
   z-index: 10;
   position: relative !important;
-  top: 18px;
+  top: 17px;
 
   display: inline-block;
 
   padding-left: 10px;
   padding-right: 10px;
 
-  font-family: sans-serif;
   font-size: 16px;
   color: white;
 
@@ -363,11 +364,11 @@ body {
   align-items: center;
   justify-content: center;
 
-  margin-top: -30px;
+  margin-top: -31px;
 
-  font-family: sans-serif;
+  font-family: "Roboto Slab", serif;
   font-size: 18px;
-  font-weight: normal;
+  font-weight: 300;
   color: white;
 }
 
