--- a/recipes/recipe-page-style.css
+++ b/recipes/recipe-page-style.css
@@ -11,9 +11,10 @@
   height: auto;
 
   text-align: center;
-  font-family: sans-serif;
+  font-family: "Roboto Slab", serif;
   font-size: 24px;
-  font-weight: normal;
+  font-weight: 300;
+  letter-spacing: 0.5px;
   color: white;
 
   /* border: 1px dashed white; */
@@ -26,9 +27,7 @@
   height: 400px;
 
   text-align: center;
-  font-family: sans-serif;
   font-size: 14px;
-  font-weight: normal;
   color: white;
 
   /* border: 1px dashed white; */
@@ -43,7 +42,9 @@
   padding-bottom: 5px;
 
   text-align: center;
+  font-family: "Roboto Slab", serif;
   font-size: 20px;
+  font-weight: 300;
 
   border-bottom: 1px solid rgb(76, 211, 182);
 }
@@ -129,9 +130,7 @@ li {
   height: auto;
   margin-top: 20px;
 
-  font-family: sans-serif;
   font-size: 14px;
-  font-weight: normal;
   color: white;
 
   /* border: 1px dashed white; */
@@ -147,7 +146,9 @@ li {
   padding-bottom: 5px;
 
   text-align: center;
+  font-family: "Roboto Slab", serif;
   font-size: 20px;
+  font-weight: 300;
 
   border-bottom: 1px solid rgb(76, 211, 182);
 }
