--- a/main-style.css
+++ b/main-style.css
@@ -24,6 +24,17 @@ body {
   transform: translateY(40px);
 }
 
+#apple-mobile-status-bar-background {
+  z-index: 20;
+  position: fixed;
+  top: -20px;
+
+  width: 100%;
+  height: 20px;
+
+  background-color: rgb(59, 135, 118);
+}
+
 #navbar {
   z-index: 30;
   position: fixed;
