--- a/main-style.css
+++ b/main-style.css
@@ -13,6 +13,10 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
 
+  background-color: rgb(59, 135, 118);
+}
+
+#main-body {
   background-color: rgb(36, 38, 40);
 }
 
@@ -27,10 +31,10 @@ body {
 #apple-mobile-status-bar-background {
   z-index: 20;
   position: fixed;
-  top: -40px;
+  top: -20px;
 
   width: 100%;
-  height: 40px;
+  height: 20px;
 
   background-color: rgb(59, 135, 118);
 }
