--- a/main-style.css
+++ b/main-style.css
@@ -16,6 +16,16 @@ body, html {
   background-color: rgb(36, 38, 40);
 }
 
+body:before {
+  display: block;
+  content: " ";
+  height: 20px;
+  top: 0;
+  background-color: yellow;
+  position: -webkit-sticky;
+  position: sticky;
+}
+
 .hidden {
   display: none;
 }
@@ -24,18 +34,7 @@ body, html {
   transform: translateY(40px);
 }
 
-#apple-mobile-status-bar-background-absolute {
-  z-index: 30;
-  position: absolute;
-  top: -50px;
-
-  width: 100%;
-  height: 100px;
-
-  background-color: yellow;
-}
-
-#apple-mobile-status-bar-background-fixed {
+#apple-mobile-status-bar-background {
   z-index: 20;
   position: fixed;
   top: -20px;
