--- a/main-style.css
+++ b/main-style.css
@@ -19,11 +19,13 @@ body, html {
 body:before {
   display: block;
   content: " ";
-  height: 20px;
-  top: 0;
-  background-color: yellow;
   position: -webkit-sticky;
   position: sticky;
+  top: -40px;
+
+  height: 40px;
+
+  background-color: yellow;
 }
 
 .hidden {
@@ -34,7 +36,7 @@ body:before {
   transform: translateY(40px);
 }
 
-#apple-mobile-status-bar-background {
+/* #apple-mobile-status-bar-background {
   z-index: 20;
   position: fixed;
   top: -20px;
@@ -43,7 +45,7 @@ body:before {
   height: 20px;
 
   background-color: rgb(59, 135, 118);
-}
+} */
 
 #navbar {
   z-index: 30;
