--- a/main-style.css
+++ b/main-style.css
@@ -289,6 +289,7 @@ body, html {
 
   margin-left: 40px;
   margin-right: 40px;
+  padding-bottom: 40px;
 
   transition: transform 300ms ease-in-out;
 }
