--- a/main-style.css
+++ b/main-style.css
@@ -427,11 +427,14 @@ ul {
 }
 
 footer {
+  z-index: 20;
+
   user-select: none;
 
   position: relative;
   top: -42px;
 
+  width: 100%;
   height: 42px;
 
   text-align: center;
