--- a/recipe-page-style.css
+++ b/recipe-page-style.css
@@ -143,6 +143,34 @@
   padding-bottom: 20px;
 }
 
+#bottom-option-bar {
+  z-index: 30;
+
+  display: none;
+
+  position: fixed;
+  bottom: 0;
+
+  width: 100%;
+  height: 50px;
+
+  background-color: rgba(59, 135, 118, 0.5);
+}
+
+#back-button {
+  position: absolute;
+  top: 8px;
+  left: 19px;
+
+  width: 0;
+  height: 0;
+  border-top: 16px solid transparent;
+  border-right: 20px solid white;
+  border-bottom: 16px solid transparent;
+
+  cursor: pointer;
+}
+
 
 
 
