--- a/main-style.css
+++ b/main-style.css
@@ -45,6 +45,16 @@ ul {
   transition: padding-bottom 300ms ease-in-out;
 }
 
+.main-content-container-expand-recipe {
+  padding-bottom: 240px !important;
+  transition: padding-bottom 300ms ease-in-out;
+}
+
+.main-content-container-retract-recipe {
+  padding-bottom: 200px !important;
+  transition: padding-bottom 300ms ease-in-out;
+}
+
 #navbar {
   z-index: 30;
   position: fixed;
