--- a/recipe-page-style.css
+++ b/recipe-page-style.css
@@ -154,7 +154,7 @@
   width: 100%;
   height: 50px;
 
-  background-color: rgba(59, 135, 118, 0.5);
+  background-color: rgb(59, 135, 118);
 }
 
 #back-button {
