--- a/recipe-page-style.css
+++ b/recipe-page-style.css
@@ -152,7 +152,7 @@
   bottom: 0;
 
   width: 100%;
-  height: 50px;
+  height: 40px;
 
   background-color: rgb(59, 135, 118);
 }
@@ -164,11 +164,24 @@
 
   width: 0;
   height: 0;
-  border-top: 16px solid transparent;
-  border-right: 20px solid white;
-  border-bottom: 16px solid transparent;
+  border-top: 12px solid transparent;
+  border-right: 16px solid white;
+  border-bottom: 12px solid transparent;
 
   cursor: pointer;
+}
+
+#back-button::after {
+  content: "";
+
+  position: absolute;
+  top: -5px;
+  left: 16px;
+
+  width: 9px;
+  height: 10px;
+
+  background-color: white;
 }
 
 
