--- a/main-style.css
+++ b/main-style.css
@@ -30,6 +30,17 @@ ul {
   transform: translateY(40px);
 }
 
+#ios-status-bar-background {
+  z-index: 40;
+  position: absolute;
+  top: -40px;
+
+  width: 100%;
+  height: 40px;
+
+  background-color: rgb(59, 135, 118);
+}
+
 #main-content-container {
   min-height: 100%;
   padding-bottom: 150px;
