--- a/main-style.css
+++ b/main-style.css
@@ -32,13 +32,15 @@ ul {
 
 #ios-status-bar-background {
   z-index: 40;
-  position: absolute;
+  position: fixed;
   top: -40px;
 
   width: 100%;
   height: 40px;
 
-  background-color: rgb(59, 135, 118);
+  /* background-color: rgb(59, 135, 118); */
+
+  background-color: yellow;
 }
 
 #main-content-container {
