--- a/main-style.css
+++ b/main-style.css
@@ -43,6 +43,18 @@ ul {
   background-color: yellow;
 }
 
+#body-background {
+  position: relative;
+  top: 0;
+
+  width: 100%;
+  min-height: 100%;
+
+  /* background-color: yellow; */
+
+  background-color: rgb(36, 38, 40);
+}
+
 #main-content-container {
   min-height: 100%;
   padding-bottom: 150px;
