--- a/main-style.css
+++ b/main-style.css
@@ -40,7 +40,7 @@ ul {
 
   /* background-color: rgb(59, 135, 118); */
 
-  background-color: yellow;
+  background-color: pink;
 }
 
 #body-background {
@@ -48,11 +48,11 @@ ul {
   top: 0;
 
   width: 100%;
-  min-height: 100%;
+  height: 100%;
 
-  /* background-color: yellow; */
+  background-color: yellow;
 
-  background-color: rgb(36, 38, 40);
+  /* background-color: rgb(36, 38, 40); */
 }
 
 #main-content-container {
