--- a/main-style.css
+++ b/main-style.css
@@ -38,21 +38,7 @@ ul {
   width: 100%;
   height: 40px;
 
-  /* background-color: rgb(59, 135, 118); */
-
-  background-color: pink;
-}
-
-#body-background {
-  position: relative;
-  top: 0;
-
-  width: 100%;
-  height: 100%;
-
-  background-color: yellow;
-
-  /* background-color: rgb(36, 38, 40); */
+  background-color: rgb(59, 135, 118);
 }
 
 #main-content-container {
