--- a/main-style.css
+++ b/main-style.css
@@ -38,7 +38,9 @@ ul {
   width: 100%;
   height: 40px;
 
-  background-color: rgb(59, 135, 118);
+  /* background-color: rgb(59, 135, 118); */
+
+  background-color: yellow;
 }
 
 #main-content-container {
@@ -475,6 +477,11 @@ footer {
     position: fixed;
     top: 0;
   }
+
+  #bottom-option-bar {
+    position: fixed;
+    bottom: 0;
+  }
 }
 
 
@@ -484,6 +491,11 @@ footer {
   #navbar {
     position: fixed;
     top: 0;
+  }
+
+  #bottom-option-bar {
+    position: fixed;
+    bottom: 0;
   }
 }
 
