--- a/main-style.css
+++ b/main-style.css
@@ -50,7 +50,7 @@ ul {
   width: 100%;
   min-height: 100%;
 
-  background-color: red;
+  background-color: rgb(36, 38, 40);
 }
 
 #main-content-container {
