--- a/main-style.css
+++ b/main-style.css
@@ -46,7 +46,6 @@ ul {
 
 #body-background {
   z-index: -10;
-
   position: fixed;
   top: 0;
 
@@ -59,10 +58,10 @@ ul {
 #body-search-mask {
   z-index: -20;
   position: fixed;
-  bottom: 0;
+  top: 0;
 
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 
   background-color: rgba(0, 0, 0, 0.8);
 
