--- a/main-style.css
+++ b/main-style.css
@@ -3,7 +3,7 @@
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
   -webkit-touch-callout: none;
-  touch-action: none;
+  touch-action: manipulation;
 
   box-sizing: border-box;
   margin: 0;
