--- a/main-style.css
+++ b/main-style.css
@@ -52,6 +52,8 @@ ul {
   min-height: 100%;
 
   background-color: rgb(36, 38, 40);
+
+  background-color: rgb(255, 255, 255);
 }
 
 #body-search-mask {
