--- a/new-recipe-finder-screen-style.css
+++ b/new-recipe-finder-screen-style.css
@@ -11,10 +11,37 @@
   font-weight: 300;
   letter-spacing: 0.5px;
   color: white;
-
-  border: 1px dashed white;
 }
 
+#new-recipe-finder-form-container {
+  display: none;
+
+  grid-column: span 5;
+
+  height: auto;
+}
+
+#new-recipe-search-bar {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
+
+  width: 100%;
+  height: 40px;
+  padding-left: 4px;
+  padding-right: 4px;
+
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  color: black;
+
+  border: none;
+  border-bottom: 1px solid white;
+  border-radius: 0;
+  background-color: white;
+  outline: none;
+
+  cursor: text;
+}
 
 
 
@@ -22,6 +49,10 @@
 /* -------------------------- MEDIA QUERY <= 1000 -------------------------- */
 @media screen and (max-width: 1000px) {
   #new-recipe-finder-title {
+    grid-column: span 4;
+  }
+
+  #new-recipe-finder-form-container {
     grid-column: span 4;
   }
 }
@@ -33,6 +64,10 @@
   #new-recipe-finder-title {
     grid-column: span 3;
   }
+
+  #new-recipe-finder-form-container {
+    grid-column: span 3;
+  }
 }
 
 
@@ -42,6 +77,10 @@
   #new-recipe-finder-title {
     grid-column: span 2;
   }
+
+  #new-recipe-finder-form-container {
+    grid-column: span 2;
+  }
 }
 
 
@@ -49,6 +88,10 @@
 /* -------------------------- MEDIA QUERY <= 400 -------------------------- */
 @media screen and (max-width: 400px) {
   #new-recipe-finder-title {
+    grid-column: span 1;
+  }
+
+  #new-recipe-finder-form-container {
     grid-column: span 1;
   }
 }
