--- a/displayed-recipe-screen-style.css
+++ b/displayed-recipe-screen-style.css
@@ -166,6 +166,23 @@
   height: 40px;
 
   background-color: rgb(59, 135, 118);
+
+  opacity: 0.0;
+  transition: opacity 500ms ease-in-out;
+}
+
+#bottom-option-bar-background {
+  z-index: 20;
+
+  display: none;
+
+  position: fixed;
+  bottom: 0;
+
+  width: 100%;
+  height: 40px;
+
+  background-color: rgb(36, 38, 40);
 }
 
 #back-button {
