--- a/new-recipe-finder-screen-style.css
+++ b/new-recipe-finder-screen-style.css
@@ -7,7 +7,7 @@
 
   text-align: center;
   font-family: "Roboto Slab", serif;
-  font-size: 30px;
+  font-size: 36px;
 
   font-weight: 300;
   letter-spacing: 0.5px;
@@ -45,11 +45,16 @@
   cursor: text;
 }
 
+#edamam-badge {
+  position: relative;
+  top: -95px;
+  left: 63px;
+}
+
 #new-recipe-search-button {
   width: 20%;
   height: 40px;
   margin: auto;
-  margin-top: 50px;
   padding-top: 10px;
 
   text-align: center;
