SPA-multi-screen-update-22

--- a/new-recipe-finder-screen-style.css
+++ b/new-recipe-finder-screen-style.css
@@ -49,6 +49,10 @@
   position: relative;
   top: -95px;
   left: 63px;
+  right: 0;
+
+  width: 200px;
+  margin: auto;
 }
 
 #new-recipe-search-button {
