--- a/new-recipe-finder-screen-style.css
+++ b/new-recipe-finder-screen-style.css
@@ -2,9 +2,9 @@
   transform: translateY(-70px);
 }
 
-.body-grid-container-retract {
+/* .body-grid-container-retract {
   transform: translateY(-100px);
-}
+} */
 
 #new-recipe-finder-title {
   display: none;
