--- a/new-recipe-finder-screen-style.css
+++ b/new-recipe-finder-screen-style.css
@@ -2,8 +2,12 @@
   transform: translateY(-70px);
 }
 
+.new-recipe-finder-screen-temp {
+  transform: translateY(-90px);
+}
+
 .new-recipe-finder-screen-retract {
-  transform: translateY(-130px);
+  transform: translateY(0px);
 }
 
 #new-recipe-finder-title {
