--- a/new-recipe-list-screen/NRLS-style.css
+++ b/new-recipe-list-screen/NRLS-style.css
@@ -4,6 +4,7 @@
   grid-column: span 5;
 
   height: auto;
+  margin-bottom: 40px;
 
   text-align: center;
   font-family: "Roboto Slab", serif;
@@ -11,6 +12,10 @@
   font-weight: 300;
   letter-spacing: 0.5px;
   color: white;
+}
+
+#edamam-badge-mask-clone-link {
+  top: 71px;
 }
 
 
