--- a/new-recipe-list-screen/NRLS-style.css
+++ b/new-recipe-list-screen/NRLS-style.css
@@ -9,6 +9,9 @@
   text-align: center;
   font-family: "Roboto Slab", serif;
   font-size: 24px;
+
+  font-size: 28px;
+
   font-weight: 300;
   letter-spacing: 0.5px;
   color: white;
