SPA-multi-screen-update-120

--- a/new-recipe-list-screen/NRLS-style.css
+++ b/new-recipe-list-screen/NRLS-style.css
@@ -66,6 +66,52 @@
   outline: none;
 }
 
+#new-recipe-search-spinner {
+  display: none;
+
+  z-index: 20;
+  position: absolute;
+  top: 300px;
+  left: 0;
+  right: 0;
+
+  height: 40px;
+  width: 40px;
+  margin: auto;
+
+  border: 2px solid white;
+  border-top-color: transparent;
+  border-radius: 50%;
+}
+
+.rotate-search-spinner {
+  /* transform: rotate(360deg); */
+
+  animation: rotateSpinner 2.5s infinite linear;
+}
+
+@keyframes rotateSpinner {
+  0%    { transform: rotate(0deg); }
+  100%  { transform: rotate(360deg); }
+}
+
+#new-recipe-search-spinner-background {
+  display: none;
+
+  z-index: 10;
+  position: absolute;
+  top: 300px;
+  left: 0;
+  right: 0;
+
+  height: 40px;
+  width: 40px;
+  margin: auto;
+
+  border: 2px solid rgb(59, 135, 118);
+  border-radius: 50%;
+}
+
 
 
 
