SPA-multi-screen-update-121

--- a/new-recipe-list-screen/NRLS-style.css
+++ b/new-recipe-list-screen/NRLS-style.css
@@ -71,7 +71,7 @@
 
   z-index: 20;
   position: absolute;
-  top: 300px;
+  top: 238px;
   left: 0;
   right: 0;
 
@@ -82,11 +82,13 @@
   border: 2px solid white;
   border-top-color: transparent;
   border-radius: 50%;
+
+  opacity: 1.0;
+
+  transition: opacity 200ms ease-in-out;
 }
 
 .rotate-search-spinner {
-  /* transform: rotate(360deg); */
-
   animation: rotateSpinner 2.5s infinite linear;
 }
 
@@ -100,7 +102,7 @@
 
   z-index: 10;
   position: absolute;
-  top: 300px;
+  top: 238px;
   left: 0;
   right: 0;
 
@@ -110,6 +112,14 @@
 
   border: 2px solid rgb(59, 135, 118);
   border-radius: 50%;
+
+  opacity: 1.0;
+
+  transition: opacity 200ms ease-in-out;
+}
+
+.fade-out-search-spinner {
+  opacity: 0.0 !important;
 }
 
 
@@ -159,6 +169,14 @@
     grid-column: span 3;
 
     margin-top: -40px;
+  }
+
+  #new-recipe-search-spinner {
+    top: 318px;
+  }
+
+  #new-recipe-search-spinner-background {
+    top: 318px;
   }
 }
 
