--- a/main-style.css
+++ b/main-style.css
@@ -473,7 +473,7 @@ ul {
   border: 1px solid rgb(76, 211, 182);
   background-color: rgb(0, 0, 0);
 
-  opacity: 1;
+  opacity: 0;
 
   text-decoration: none;
   cursor: pointer;
@@ -557,7 +557,7 @@ ul {
 }
 
 .tile-fade-in {
-  opacity: 1.0;
+  opacity: 1.0 !important;
   transition: opacity 1000ms ease-in-out;
 }
 
